@@ -53,6 +53,7 @@ MBDyn 1.X-Devel
 		  (Reinhard Resch)
 		- fixed modal body assembly (Reinhard Resch)
 		- fixed solver initialization after first step
+		- fixed compilation in FreeBSD (Pedro Giffuni)
 
 MBDyn 1.7.1
 	Enhancements:
